--- a/source/sass/global/container.scss
+++ b/source/sass/global/container.scss
@@ -1,6 +1,10 @@
 .container {
   width: 100%;
-  max-width: 1260px;
+  max-width: 1366px;
   margin: 0 auto;
-  padding: 0 34px 0 50px;
+  padding: 30px 103px;
+
+  @include vp-1199 {
+    padding: 30px 45px;
+  }
 }
