--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -3,18 +3,36 @@
 
 // Default
 
-$color-default-black:               #011c40;
-$color-default-white:               #f9fbfd;
-$color-transparent:                 rgba(255, 255, 255, 0);
+$color-default-black:             #102654;
+$color-default-white:             #ffffff;
+$color-transparent:               rgba(255, 255, 255, 0);
 
 // Project palette
 // для нейминга цветов используем https://www.htmlcsscolor.com/hex/334482
 
-$color-neon-blue:                   #2c39f2;
+$color-neon-blue:                 #2c39f2;
+$color-ghost-white:               #f8f9fc;
+$color-venetian-red:              #b80027;
+$color-dark-cerulean:             #003d85;
+$color-crimson:                   #d10a42;
+$color-egyptian-blue:             #103aae;
+$color-torch-red:                 #ed0233;
+$color-resolution-blue:           #1c3374;
+$color-black-russian:             #030a1a;
 
 // Gradient
 
 $black-to-right:                    linear-gradient(90deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0) 75%);
+$blue-to-red-round-desktop:         conic-gradient(from 130.31deg at 16.03% 39.06%, #b80027 -46.69deg, #003d85 32.24deg, #b80027 313.31deg, #003d85 392.24deg);
+$blue-to-red-round-tablet:          conic-gradient(from 139.4deg at 20.7% 35.74%, #b80027 -46.69deg, #003d85 32.24deg, #b80027 313.31deg, #003d85 392.24deg);
+$blue-to-red-round-mobile:          conic-gradient(from 171.43deg at 35.31% 34.22%, #b80027 -46.69deg, #003d85 32.24deg, #b80027 313.31deg, #003d85 392.24deg);
+$blue-to-red:                       linear-gradient(97.05deg, #ed0233 17.6%, #003eb7 95.31%);
+
+$blue-to-red-square:                linear-gradient(127.61deg, #d10a42 0%, #0041ca 45.58%);
+$blue-to-red-advatnages:            linear-gradient(142.51deg, #d10a42 0%, #0041ca 87.33%);
+
+$blue-to-red-border:                linear-gradient(148.82deg, #d10a42 0.85%, #00359f 100%);
+
 
 // Typography
 // ---------------------------------
@@ -27,8 +45,8 @@ $fz-default:                        16px;
 $ff-rouble:                         "Rouble", "Arial", sans-serif;
 $ff-placeholder:                    "Placeholder", "Arial", sans-serif;
 
-$ff-main:                           "Roboto Condensed", "Arial", sans-serif;
-$ff-secondary:                      "Alumni Sans", "Arial", sans-serif;
+$ff-secondary:                      "Roboto Condensed", "Arial", sans-serif;
+$ff-main:                           "Alumni Sans", "Arial", sans-serif;
 
 // Animation
 // ---------------------------------
@@ -48,6 +66,7 @@ $vp-320:                            320px;
 $vp-375:                            375px;
 $vp-768:                            768px;
 $vp-1024:                           1024px;
+$vp-1200:                           1200px;
 $vp-1280:                           1280px;
 $vp-1440:                           1440px;
 $vp-1920:                           1920px;
