мобильный хедер и блок с залом

--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -20,6 +20,10 @@ $color-torch-red:                 #ed0233;
 $color-resolution-blue:           #1c3374;
 $color-black-russian:             #030a1a;
 
+$color-midnight-blue:       #0e1356;
+$color-echo-blue:               #aaacbf;
+$color-mariner:           #4563a3;
+
 // Gradient
 
 $black-to-right:                    linear-gradient(90deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0) 75%);
