--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,17 +1,14 @@
 .header {
   min-height: 658px;
   background: $blue-to-red-round-desktop;
-  /*
+
   @include vp-1199 {
-
+    min-height: 554px;
   }
-  */
 
-  /*
   @include vp-767 {
-
+    min-height: 491px;
   }
-  */
 }
 
 .header__top {
@@ -25,9 +22,31 @@
   @include vp-1199 {
     width: 82px;
   }
+
+  @include vp-767 {
+    width: 69px;
+  }
 }
 
-.header__phone {
+.header__contacts {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 675px;
+  margin-left: auto;
+  margin-right: -15px;
+  z-index: 1;
+
+  @include vp-1199 {
+    max-width: 458px;
+  }
+
+  @include vp-767 {
+    max-width: 131px;
+  }
+}
+
+.header__link {
+  position: relative;
   font-family: $ff-main;
   font-style: normal;
   font-weight: 600;
@@ -36,6 +55,8 @@
   letter-spacing: 0.03em;
   color: $color-default-white;
   margin-top: 0;
+  margin-right: 15px;
+  margin-bottom: 10px;
 
   @include vp-1199 {
     font-weight: 700;
@@ -45,11 +66,34 @@
     margin-top: 5px;
   }
 
-  &:hover,
-  &:focus-visible {
-    transition: all 0.3s ease-in-out;
-    color: $color-default-black;
-    opacity: 0.8;
+  @include vp-767 {
+    font-size: 20px;
+    line-height: 24px;
+  }
+
+  &::after {
+    content: "";
+    display: block;
+    position: absolute;
+    right: 0;
+    bottom: -3px;
+    width: 0;
+    height: 2px; /* Высота линии */
+    background-color: $color-default-black; /* Цвет подчеркивания при исчезании линии*/
+    transition: width 0.5s; /* Время эффекта */
+  }
+
+  &:hover::after,
+  &:focus-visible::after {
+    content: "";
+    width: 100%;
+    display: block;
+    position: absolute;
+    left: 0;
+    bottom: -3px;
+    height: 2px; /* Высота линии */
+    background-color: $color-default-white; /* Цвет подчеркивания при появлении линии*/
+    transition: width 0.5s;  /* Время эффекта */
   }
 
   &:active {
@@ -59,19 +103,45 @@
 
 .header__intro {
   display: grid;
-  grid-template-columns: 45% 1fr;
-  gap: 30px;
+  grid-template-columns: 48% 1fr;
   padding-right: 17.2%;
-  margin-top: -12px;
+  margin-top: -20px;
 
   @include vp-1199 {
-    grid-template-columns: 48% 1fr;
+    grid-template-columns: 52% 1fr;
     padding-right: 0;
-    padding-top: 30px;
+    padding-top: 28px;
+  }
+
+  @include vp-767 {
+    grid-template-columns: 1fr;
   }
 }
 
-.header__content span {
+.header__img-wrapper {
+  @include vp-767 {
+    display: none;
+  }
+}
+
+.header__info {
+  display: flex;
+
+  @include vp-767 {
+    justify-content: center;
+  }
+}
+
+.header__title-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.header__img-wrapper img {
+  background-color: $color-midnight-blue;
+}
+
+.header__title-wrapper span {
   font-family: $ff-main;
   font-weight: 600;
   font-size: 48px;
@@ -79,21 +149,29 @@
   letter-spacing: 0.03em;
   color: $color-default-white;
   display: flex;
+  align-items: center;
+  justify-content: center;
   margin-top: 112px;
-  margin-left: 263px;
+  margin-left: 78px;
 
   @include vp-1199 {
+    justify-content: flex-end;
     font-size: 34px;
     line-height: 41px;
-    margin-top: 50px;
+    margin: 50px 3px 0 0;
+  }
+
+  @include vp-767 {
+    font-weight: 600;
+    font-size: 28px;
+    line-height: 34px;
+    letter-spacing: 0.03em;
+    margin-left: 0;
+    margin-right: 5px;
   }
 }
 
-.header__info {
-  display: flex;
-}
-
-.header h1 {
+.header__title-wrapper h1 {
   text-transform: uppercase;
   font-family: $ff-main;
   font-weight: 600;
@@ -103,30 +181,35 @@
   letter-spacing: 0.05em;
   color: $color-default-white;
   width: 250px;
-  margin: 13px 0 50px;
-  position: relative;
-  left: 7%;
+  margin: 15px 0 47px 13px;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: $color-default-white;
 
   @include vp-1199 {
     text-transform: none;
     width: 191px;
     font-size: 72px;
     line-height: 86px;
-    margin-top: 7px;
-    margin-bottom: 37px;
+    margin: 8px 0 36px 20px;
+  }
+
+  @include vp-767 {
+    margin: 16px 0 21px -13px;
   }
 }
 
 .header__list {
-  margin: 135px 0 0 0;
+  margin: 305px 0 30px 20px;
   list-style: none;
   padding: 0;
-  position: relative;
-  left: 4%;
-  width: 115px;
+  width: 113px;
 
   @include vp-1199 {
-    margin: 95px 20px 0 0;
+    margin: 186px 0 30px;
+  }
+
+  @include vp-767 {
+    margin: 176px 0 15px;
   }
 }
 
@@ -150,11 +233,17 @@
   background-color: transparent;
   border: 4px solid $color-default-white;
   min-height: 60px;
-  width: 54.5%;
+  width: 51%;
   margin-left: 163px;
 
   @include vp-1199 {
     width: 53%;
     margin-left: 139px;
+  }
+
+  @include vp-767 {
+    min-height: 63px;
+    width: 100%;
+    margin-left: 0;
   }
 }
