--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -19,6 +19,8 @@ $color-egyptian-blue:             #103aae;
 $color-torch-red:                 #ed0233;
 $color-resolution-blue:           #1c3374;
 $color-black-russian:             #030a1a;
+$color-chambray:               #495a7d;
+$color-whisper:           #e8e8e8;
 
 $color-midnight-blue:       #0e1356;
 $color-echo-blue:               #aaacbf;
@@ -36,7 +38,6 @@ $blue-to-red-square:                linear-gradient(127.61deg, #d10a42 0%, #0041
 $blue-to-red-advatnages:            linear-gradient(142.51deg, #d10a42 0%, #0041ca 87.33%);
 
 $blue-to-red-border:                linear-gradient(148.82deg, #d10a42 0.85%, #00359f 100%);
-
 
 // Typography
 // ---------------------------------
