--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -21,7 +21,7 @@
 @import "blocks/btn";
 @import "blocks/header";
 @import "blocks/gym";
-
+@import "blocks/subscription";
 // ---------------------------------
 
 // ❗❗❗ запрещено использовать изображения в css, касается как jpg \ png, так и svg
