--- a/source/sass/blocks/gym.scss
+++ b/source/sass/blocks/gym.scss
@@ -2,14 +2,14 @@
   display: grid;
   grid-template-columns: 32% 1fr;
   gap: 88px;
-  padding: 120px 103px 120px 163px;
+  padding: 120px 103px 53px 163px;
 
   @include vp-1199 {
     display: flex;
     gap: 0;
     flex-direction: column;
     align-items: center;
-    padding: 66px 44px 120px 44px;
+    padding: 66px 44px 51px;
   }
 
   @include vp-767 {
@@ -17,7 +17,7 @@
     gap: 0;
     flex-direction: column;
     align-items: center;
-    padding: 39px 0 120px;
+    padding: 39px 0 98px;
   }
 }
 
@@ -174,7 +174,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-image: url("../../img/svg/video-button.svg");
+  background-image: url("../img/svg/video-button.svg");
   background-color: transparent;
 
   @include vp-1199 {
