--- a/source/sass/blocks/subscription.scss
+++ b/source/sass/blocks/subscription.scss
@@ -2,16 +2,42 @@
   background-color: $color-ghost-white;
 }
 
+.subscription__container {
+  overflow: hidden;
+  position: relative;
+  z-index: 1;
+
+  @include vp-1199 {
+    padding: 30px 163px;
+  }
+}
+
 .subscription h2 {
+  font-weight: 600;
   font-size: 54px;
   line-height: 65px;
   letter-spacing: 0.03em;
   display: flex;
   justify-content: center;
+  margin-bottom: 4px;
+  margin-left: -3px;
+
+  @include vp-1199 {
+    margin-left: -13px;
+    margin-bottom: 8px;
+    font-size: 42px;
+    line-height: 50px;
+  }
+
+  @include vp-767 {
+    font-size: 32px;
+    line-height: 38px;
+  }
 }
 
 .subscription__nav {
   display: flex;
+  flex-wrap: wrap;
   text-align: center;
   position: relative;
   width: fit-content;
@@ -29,6 +55,16 @@
     height: 2px;
     background-color: rgba(120, 120, 120, 0.2);
   }
+
+  @include vp-1199 {
+    column-gap: 55px;
+    margin: 0 auto 44px;
+  }
+
+  @include vp-767 {
+    margin: 0 auto 35px;
+    column-gap: 45px;
+  }
 }
 
 .subscription__nav-button {
@@ -41,6 +77,7 @@
   padding: 12px 0 13px;
   width: fit-content;
   opacity: 0.5;
+  background-color: transparent;
 
   &::after {
     content: "";
@@ -51,6 +88,24 @@
     width: 100%;
     height: 2px;
     background-color: transparent;
+
+    @include vp-767 {
+      width: 110%;
+    }
+  }
+
+  &:last-child::after {
+    @include vp-767 {
+      width: 100%;
+    }
+  }
+
+  @include vp-1199 {
+    font-size: 18px;
+  }
+
+  @include vp-767 {
+    font-size: 16px;
   }
 
   &:hover {
@@ -80,13 +135,29 @@
   }
 }
 
-.subscription__content h3 {
+[data-sub-title] {
+  display: flex;
+  justify-content: center;
+  font-family: $ff-secondary;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 29px;
+}
+
+.subscription__content h4 {
   display: flex;
   justify-content: center;
   font-family: $ff-secondary;
   font-weight: 700;
   font-size: 26px;
   line-height: 29px;
+  margin-bottom: 8px;
+
+  @include vp-767 {
+    font-size: 22px;
+    margin-top: 22px;
+    line-height: 110.16%;
+  }
 }
 
 .subscription__content span {
@@ -100,18 +171,34 @@
 }
 
 .subscription__list {
+  margin: 0;
+  padding: 0;
   list-style: none;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  gap: 40px;
+
+  @include vp-1199 {
+    grid-template-columns: 1fr;
+  }
+
+  @include vp-767 {
+    gap: 35px;
+  }
 }
 
 .subscription__item {
-  padding: 56px 77px 68px;
+  padding: 22px;
+  min-height: 448px;
   border: 7px solid transparent;
   border-image-source: none;
   border-image-slice: 1;
   list-style-type: none;
   background-color: $color-default-white;
+
+  @include vp-767 {
+    min-height: 384px;
+  }
 
   &:hover,
   &:focus-within {
@@ -119,15 +206,38 @@
   }
 }
 
+.subscription__link {
+  width: 69%;
+  margin: 0 auto;
+  min-height: 64px;
+  font-family: $ff-secondary;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  border: 2px solid $color-default-black;
+
+  @include vp-1199 {
+    width: 54%;
+  }
+
+  @include vp-767 {
+    width: 89%;
+  }
+}
+
 .subscription__item:hover .subscription__link,
 .subscription__item:focus-within .subscription__link {
   background: $blue-to-red;
+  border: none;
   color: $color-default-white;
 }
 
 .subscription__item:hover .subscription__link:hover,
 .subscription__item:focus-within .subscription__link:hover {
   color: $color-default-black;
+  border: none;
 }
 
 .subscription__price p {
@@ -141,6 +251,8 @@
   color: $color-egyptian-blue;
   position: relative;
   z-index: 1;
+  margin-top: 66px;
+  margin-bottom: 35px;
 
   &::before {
     content: attr(data-price);
@@ -148,12 +260,52 @@
     height: 100%;
     position: absolute;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -58%);
     font-size: 100px;
     line-height: 150px;
     font-weight: 700;
     color: $color-whisper;
     z-index: -1;
+
+    @include vp-767 {
+      font-size: 80px;
+      transform: translate(-51%, -81%);
+    }
+  }
+
+  @include vp-767 {
+    margin-top: 55px;
+    margin-bottom: 30px;
+    font-size: 48px;
+    margin-left: 2px;
   }
 }
 
+.subscription__rouble {
+  @include vp-767 {
+    width: 24px;
+    height: 33px;
+  }
+}
+
+.subscription img {
+  z-index: -1;
+  display: block;
+  width: 321px;
+  height: 384px;
+  position: absolute;
+  bottom: -184px;
+  right: -108px;
+  transform: rotate(150deg);
+
+  @include vp-1199 {
+    width: 289px;
+    height: 345px;
+    bottom: -176px;
+    right: -10px;
+  }
+
+  @include vp-767 {
+    display: none;
+  }
+}
