--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -19,12 +19,17 @@ $color-egyptian-blue:             #103aae;
 $color-torch-red:                 #ed0233;
 $color-resolution-blue:           #1c3374;
 $color-black-russian:             #030a1a;
-$color-chambray:               #495a7d;
-$color-whisper:           #e8e8e8;
+$color-chambray:                  #495a7d;
+$color-whisper:                   #e8e8e8;
+$color-spindle:                   #b6bdcc;
+$color-dark-gray:                 #afafaf;
 
-$color-midnight-blue:       #0e1356;
-$color-echo-blue:               #aaacbf;
-$color-mariner:           #4563a3;
+// фоновые цвета изображений
+$color-midnight-blue:             #0e1356;
+$color-echo-blue:                 #aaacbf;
+$color-mariner:                   #4563a3;
+$color-torea-bay:                 #282b84;
+$color-storm-grey:                #7d8192;
 
 // Gradient
 
