--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -23,6 +23,7 @@ $color-chambray:                  #495a7d;
 $color-whisper:                   #e8e8e8;
 $color-spindle:                   #b6bdcc;
 $color-dark-gray:                 #afafaf;
+$color-persian-blue:              #2e35ac;
 
 // фоновые цвета изображений
 $color-midnight-blue:             #0e1356;
