--- a/source/sass/blocks/coaches.scss
+++ b/source/sass/blocks/coaches.scss
@@ -1,13 +1,14 @@
 .coaches__container {
   position: relative;
   padding-top: 33px;
+  padding-bottom: 90px;
 
   @include vp-1199 {
-    padding: 36px 101px;
+    padding: 36px 101px 100px;
   }
 
   @include vp-767 {
-    padding: 10px 47px;
+    padding: 10px 47px 70px;
   }
 }
 
@@ -104,6 +105,11 @@
   }
 }
 
+.coaches__item--alexsandr img {
+  transform: scale(1.05);
+  object-position: 0 1px;
+}
+
 .coaches__description-wrapper {
   overflow-y: auto;
   width: 100%;
@@ -179,12 +185,12 @@
   }
 }
 
-.coaches__item ul {
+.coaches__description-list {
   margin: 0;
   padding: 0;
 }
 
-.coaches__item li {
+.coaches__description-item {
   position: relative;
   margin-bottom: 13px;
   padding-left: 16px;
@@ -297,17 +303,17 @@
   stroke: $color-dark-gray;
 
   @include vp-1199 {
-    top: 57.3%;
+    top: 51%;
   }
 
   @include vp-767 {
-    top: 60.3%;
+    top: 52.3%;
     width: 32px;
   }
 
   &--prev {
     left: 31px;
-    top: 61.3%;
+    top: 55.3%;
 
     @include vp-1199 {
       left: 30px;
@@ -320,7 +326,7 @@
 
   &--next {
     right: 31px;
-    top: 61.3%;
+    top: 55.3%;
 
     @include vp-1199 {
       right: 31px;
