--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -24,6 +24,7 @@
 @import "blocks/subscription";
 @import "blocks/promo";
 @import "blocks/coaches";
+@import "blocks/advantages";
 
 
 // ---------------------------------
