--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -25,6 +25,8 @@
 @import "blocks/promo";
 @import "blocks/coaches";
 @import "blocks/advantages";
+@import "blocks/stock";
+@import "blocks/reviews";
 
 
 // ---------------------------------
