--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -31,6 +31,7 @@ $color-echo-blue:                 #aaacbf;
 $color-mariner:                   #4563a3;
 $color-torea-bay:                 #282b84;
 $color-storm-grey:                #7d8192;
+$color-cornflower-blue:           #4b85e6;
 
 // Gradient
 
