--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -12,17 +12,18 @@
   flex-direction: column;
   flex-wrap: wrap;
   background-color: $color-ghost-white;
-  padding: 104px 126px 30px 103px;
+  padding: 104px 126px 85px 103px;
 
   @include vp-1199 {
     width: 100%;
     margin: 0 auto;
     padding-top: 57px;
+    padding-bottom: 93px;
   }
 
   @include vp-767 {
     max-width: 100%;
-    padding: 39px 0;
+    padding: 39px 0 63px;
   }
 }
 
@@ -52,16 +53,16 @@
   padding: 0 36px 0 28px;
   list-style: none;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  column-gap: 34.5%;
+  grid-template-columns: 1fr 23% 1fr;
+  column-gap: 60px;
   row-gap: 129px;
   position: relative;
 
   @include vp-1199 {
+    grid-template-columns: 1fr 1fr;
     margin: 4px 0 0;
     column-gap: 30px;
     row-gap: 43px;
-    justify-items: center;
     padding: 0;
   }
 
@@ -80,7 +81,6 @@
 
   @include vp-1199 {
     margin: 0;
-    justify-items: center;
 
     &::before,
     &::after {
@@ -101,13 +101,42 @@
   position: absolute;
   width: 100%;
   height: 2px;
-  top: 172%;
+  bottom: -77px;
+  left: 0;
   border: none;
   background: rgba(209, 10, 66, 0.2);
 }
 
 .advantages__item--center::before {
   display: none;
+}
+
+.advantages__item:nth-child(2n+1) {
+  @media (min-width: 1200px) {
+    grid-column: 3/4;
+  }
+}
+
+.advantages__item:nth-child(1),
+.advantages__item:nth-child(2n) {
+  @media (min-width: 1200px) {
+    grid-column: 1/2;
+  }
+}
+
+.advantages__item:nth-child(2) {
+  @media (min-width: 1200px) {
+    grid-column: 3/4;
+  }
+}
+
+.advantages__item:nth-child(3) {
+  @media (min-width: 1200px) {
+    grid-row: 1 / span 2;
+    grid-column: 2/3;
+    margin-top: 30px;
+    margin-bottom: 5px;
+  }
 }
 
 .advantages__item:nth-child(1) .advantages__accent,
@@ -192,20 +221,14 @@
 .advantages__item--center {
   display: flex;
   flex-direction: column;
-  padding: 34px 32px;
   box-sizing: border-box;
-  position: absolute;
-  width: 21.5%;
-  top: 9%;
-  left: 39%;
-  bottom: 2.1%;
+  padding: 35px 32px;
   background-color: $color-resolution-blue;
   gap: 0;
 
   @include vp-1199 {
     width: 65%;
     padding: 15px 115px 15px;
-    position: static;
     grid-row: 2 / 3;
     grid-column: 1 / -1;
     gap: 0;
@@ -214,7 +237,6 @@
   }
 
   @include vp-767 {
-    position: static;
     width: 100%;
     margin-top: 23px;
     margin-bottom: 7px;
@@ -244,7 +266,7 @@
   text-align: center;
   color: $color-default-white;
   font-size: 26px;
-  margin-top: -10px;
+  margin-top: -9px;
   margin-bottom: 61px;
 
   @include vp-1199 {
