--- a/source/sass/blocks/coaches.scss
+++ b/source/sass/blocks/coaches.scss
@@ -52,6 +52,7 @@
   list-style-type: none;
   cursor: pointer;
   background-color: $color-echo-blue;
+  aspect-ratio: 260/294;
 
   scrollbar-color: $color-chambray $color-default-black; /* «цвет ползунка» «цвет полосы скроллбара» */
   scrollbar-width: thin;  /* толщина */
@@ -69,8 +70,6 @@
     border-radius: 3em;
   }
 
-  aspect-ratio: 260/294;
-
   @include vp-1199 {
     min-height: 294px;
     aspect-ratio: 268/294;
@@ -86,28 +85,17 @@
   width: 100%;
   object-fit: cover;
 
+  aspect-ratio: 260/294;
+
   @include vp-1199 {
     min-height: 294px;
+    aspect-ratio: 268/294;
   }
 
   @include vp-767 {
     min-height: 274px;
+    aspect-ratio: 226/274;
   }
-}
-
-.coaches__item--mary img {
-  transform: scale(1.05);
-  object-position: 1px 6px;
-
-  @include vp-1199 {
-    transform: scale(1);
-    object-position: 0 0;
-  }
-}
-
-.coaches__item--alexsandr img {
-  transform: scale(1.05);
-  object-position: 0 1px;
 }
 
 .coaches__description-wrapper {
@@ -122,7 +110,6 @@
     padding-bottom: 75px;
   }
 }
-
 
 .coaches__description {
   box-sizing: border-box;
@@ -150,7 +137,7 @@
   width: 100%;
   position: absolute;
   height: min-content;
-  color: #f9fbfd;
+  color: $color-default-white;
   z-index: 1;
   bottom: 3px;
   text-align: center;
@@ -170,9 +157,9 @@
   font-family: $ff-secondary;
   font-weight: 400;
   font-size: 16px;
-  line-height: 150%;
+  line-height: 130%;
   color: $color-spindle;
-  margin: -6px 0 34px -33px;
+  margin: 0 0 34px -33px;
   padding: 0;
   text-align: center;
 
@@ -224,6 +211,7 @@
   width: 100%;
   padding: 52px 25px 0;
   opacity: 1;
+  line-height: 130%;
 
   @include vp-1199 {
     padding: 52px 44px 0 35px;
@@ -251,32 +239,6 @@
   transform: matrix(-1, 0, 0, 1, 0, 0);
 }
 
-.coaches__item--alexsandr:hover img,
-.coaches__item--alexsandr:focus img,
-.coaches__item--alexsandr:focus-visible img {
-  transform: matrix(-1, 0, 0, 1, 0, 0) scale(100%, 100%) translate(0, 0);
-
-  @include vp-1199 {
-    transform: matrix(-1, 0, 0, 1, 0, 0) scale(101%, 102%) translate(-1px, -8px);
-  }
-
-  @include vp-1199 {
-    transform: matrix(-1, 0, 0, 1, 0, 0) scale(100%, 104%) translate(2px, 0);
-  }
-}
-
-.coaches__item--mary:hover img,
-.coaches__item--mary:focus img,
-.coaches__item--mary:focus-visible img {
-  transform: matrix(-1, 0, 0, 1, 0, 0) scale(1.05);
-  object-position: 1px 6px;
-
-  @include vp-1199 {
-    transform: scale(1);
-    object-position: 0 0;
-  }
-}
-
 .coaches__item:hover .coaches__description-wrapper,
 .coaches__item:focus .coaches__description-wrapper,
 .coaches__item:focus-visible .coaches__description-wrapper {
@@ -292,6 +254,7 @@
 }
 
 .coaches__button {
+  display: none;
   padding: 5px;
   position: absolute;
   width: 46px;
@@ -301,22 +264,22 @@
   cursor: pointer;
   fill: none;
   stroke: $color-dark-gray;
+  top: 315px;
 
   @include vp-1199 {
-    top: 51%;
+    top: 277px;
   }
 
   @include vp-767 {
-    top: 52.3%;
+    top: 251px;
     width: 32px;
   }
 
   &--prev {
     left: 31px;
-    top: 55.3%;
 
     @include vp-1199 {
-      left: 30px;
+      left: 31px;
     }
 
     @include vp-767 {
@@ -326,7 +289,6 @@
 
   &--next {
     right: 31px;
-    top: 55.3%;
 
     @include vp-1199 {
       right: 31px;
@@ -363,5 +325,20 @@
   @include vp-767 {
     width: 10px;
     height: 19px;
+  }
+}
+
+[data-coaches-list].no-js {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 40px;
+
+  @include vp-1199 {
+    grid-template-columns: 1fr 1fr;
+    gap: 30px;
+  }
+
+  @include vp-767 {
+    grid-template-columns: 1fr;
   }
 }
