--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -24,6 +24,7 @@ $color-whisper:                   #e8e8e8;
 $color-spindle:                   #b6bdcc;
 $color-dark-gray:                 #afafaf;
 $color-persian-blue:              #2e35ac;
+$color-light-slate-grey:          #74819c;
 
 // фоновые цвета изображений
 $color-midnight-blue:             #0e1356;
