--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -27,7 +27,9 @@
 @import "blocks/advantages";
 @import "blocks/stock";
 @import "blocks/reviews";
-
+@import "blocks/form-contacts";
+@import "blocks/form";
+@import "blocks/contacts";
 
 // ---------------------------------
 
