--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -173,6 +173,10 @@
   @include vp-1199 {
     font-size: 58px;
   }
+
+  @include vp-767 {
+    text-align: center;
+  }
 }
 
 .advantages__item span {
@@ -233,7 +237,7 @@
     grid-column: 1 / -1;
     gap: 0;
     min-height: 239px;
-    margin-bottom: -15px;
+    margin: 0 auto -15px;
   }
 
   @include vp-767 {
