--- a/source/sass/blocks/coaches.scss
+++ b/source/sass/blocks/coaches.scss
@@ -121,11 +121,11 @@
   flex-direction: column;
 
   @include vp-1199 {
-    padding: 0 52px 19px 55px;
+    padding: 7px 52px 19px 55px;
   }
 
   @include vp-767 {
-    padding: 0 31px 20px 33px;
+    padding: 6px 31px 20px 33px;
   }
 }
 
