--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -7,6 +7,7 @@
 
   @include vp-1199 {
     padding: 61px 162px 61px 132px;
+    min-height: 324px;
   }
 
   @include vp-767 {
@@ -111,7 +112,7 @@
   min-height: 54px;
 
   @include vp-767 {
-    margin-top: 8px;
+    margin-top: 7px;
   }
 }
 
