--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -30,6 +30,9 @@
 @import "blocks/form-contacts";
 @import "blocks/form";
 @import "blocks/contacts";
+@import "blocks/footer";
+@import "blocks/navigation";
+@import "blocks/social";
 
 // ---------------------------------
 
