--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -111,45 +111,9 @@
   display: none;
 }
 
-.advantages__item:nth-child(2n+1) {
-  @media (min-width: 1200px) {
-    grid-column: 3/4;
-  }
-}
-
-.advantages__item:nth-child(1),
-.advantages__item:nth-child(2n) {
-  @media (min-width: 1200px) {
-    grid-column: 1/2;
-  }
-}
-
-.advantages__item:nth-child(2) {
-  @media (min-width: 1200px) {
-    grid-column: 3/4;
-  }
-}
-
-.advantages__item:nth-child(3) {
-  @media (min-width: 1200px) {
-    grid-row: 1 / span 2;
-    grid-column: 2/3;
-    margin-top: 30px;
-    margin-bottom: 5px;
-  }
-}
-
-.advantages__item:nth-child(1) .advantages__accent,
-.advantages__item:nth-child(2n) .advantages__accent {
+.advantages__item--comfort,
+.advantages__item--space {
   margin-left: 18px;
-
-  @include vp-1199 {
-    margin-left: 0;
-  }
-}
-
-.advantages__item:nth-child(2) .advantages__accent {
-  margin-left: 0;
 }
 
 .advantages__accent {
@@ -229,6 +193,13 @@
   padding: 35px 32px;
   background-color: $color-resolution-blue;
   gap: 0;
+
+  @media (min-width: 1200px) {
+    grid-row: 1 / span 2;
+    grid-column: 2/3;
+    margin-top: 30px;
+    margin-bottom: 5px;
+  }
 
   @include vp-1199 {
     width: 65%;
