--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -80,6 +80,8 @@
   font-size: 18px;
   font-weight: 400;
   line-height: 27px;
+  width: fit-content;
+  max-width: 100px;
 
   @include vp-1199 {
     font-size: 12px;
@@ -97,6 +99,7 @@
   line-height: 58px;
   position: relative;
   width: fit-content;
+  max-width: 100px;
   margin-bottom: 10px;
 
   &::before {
