--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -33,7 +33,7 @@
   line-height: 65px;
   text-align: center;
   letter-spacing: 0.03em;
-  margin-bottom: 24px;
+  margin-bottom: 25px;
 
   @include vp-1199 {
     font-size: 42px;
@@ -45,6 +45,7 @@
     font-size: 32px;
     line-height: 38px;
     margin-left: -18px;
+    margin-bottom: 24px;
   }
 }
 
@@ -62,13 +63,12 @@
     grid-template-columns: 1fr 1fr;
     margin: 4px 0 0;
     column-gap: 30px;
-    row-gap: 43px;
+    row-gap: 35px;
     padding: 0;
   }
 
   @include vp-767 {
-    display: flex;
-    flex-direction: column;
+    grid-template-columns: 1fr;
     gap: 20px;
   }
 }
@@ -96,7 +96,7 @@
   }
 }
 
-.advantages__item:nth-last-child(n+4)::before {
+.advantages__item:nth-last-child(n+3)::before {
   content: "";
   position: absolute;
   width: 100%;
@@ -107,13 +107,61 @@
   background: rgba(209, 10, 66, 0.2);
 }
 
-.advantages__item--center::before {
-  display: none;
+.advantages__item:nth-child(2n-1) {
+  grid-column: 3 / 4;
+
+  @include vp-1199 {
+    grid-column: 2 / 3;
+  }
+
+  @include vp-767 {
+    grid-column: 1 / -1;
+  }
 }
 
-.advantages__item--comfort,
-.advantages__item--space {
-  margin-left: 18px;
+.advantages__item:nth-child(2n) {
+  grid-column: 1 / 2;
+  padding-left: 20px;
+
+  @include vp-1199 {
+    padding-left: 0;
+  }
+
+  @include vp-767 {
+    padding-left: 46px;
+    grid-column: 1 / -1;
+  }
+}
+
+.advantages__item:first-child {
+  margin: 30px 0 6px;
+  padding: 35px 30px 29px;
+  grid-row: 1 / span 2;
+  grid-column: 2 / 3;
+  background-color: $color-resolution-blue;
+  color: $color-default-white;
+  display: block;
+  text-align: center;
+
+  @include vp-1199 {
+    padding: 14px 120px 38px;
+    width: 65%;
+    grid-row: 2 / 3;
+    grid-column: 1 / -1;
+    margin: 6px auto -7px;
+  }
+
+  @include vp-767 {
+    grid-column: 1 / -1;
+    grid-row: 3 / 4;
+    width: 100%;
+    padding: 19px 60px 44px;
+    margin: 20px 0 6px;
+  }
+
+  &::before {
+    display: none;
+  }
 }
 
 .advantages__accent {
@@ -152,6 +200,10 @@
   margin-top: -21px;
   display: block;
 
+  @include vp-1199 {
+    margin-top: -20px;
+  }
+
   @include vp-767 {
     text-align: center;
   }
@@ -171,7 +223,7 @@
   }
 
   @include vp-767 {
-    margin-top: 8px;
+    margin-top: 7px;
     text-align: center;
   }
 }
@@ -183,39 +235,6 @@
 
   @include vp-767 {
     text-align: center;
-  }
-}
-
-.advantages__item--center {
-  display: flex;
-  flex-direction: column;
-  box-sizing: border-box;
-  padding: 35px 32px;
-  background-color: $color-resolution-blue;
-  gap: 0;
-
-  @media (min-width: 1200px) {
-    grid-row: 1 / span 2;
-    grid-column: 2/3;
-    margin-top: 30px;
-    margin-bottom: 5px;
-  }
-
-  @include vp-1199 {
-    width: 65%;
-    padding: 15px 115px 15px;
-    grid-row: 2 / 3;
-    grid-column: 1 / -1;
-    gap: 0;
-    min-height: 239px;
-    margin: 0 auto -15px;
-  }
-
-  @include vp-767 {
-    width: 100%;
-    margin-top: 23px;
-    margin-bottom: 7px;
-    padding: 19px 74px 43px;
   }
 }
 
