--- a/source/sass/blocks/coaches.scss
+++ b/source/sass/blocks/coaches.scss
@@ -53,7 +53,6 @@
   cursor: pointer;
   background-color: $color-echo-blue;
   aspect-ratio: 260/294;
-
   scrollbar-color: $color-chambray $color-default-black; /* «цвет ползунка» «цвет полосы скроллбара» */
   scrollbar-width: thin;  /* толщина */
   overflow: hidden;
@@ -84,7 +83,6 @@
 .coaches__item img {
   width: 100%;
   object-fit: cover;
-
   aspect-ratio: 260/294;
 
   @include vp-1199 {
@@ -276,30 +274,6 @@
     width: 32px;
   }
 
-  &--prev {
-    left: 31px;
-
-    @include vp-1199 {
-      left: 31px;
-    }
-
-    @include vp-767 {
-      left: 4px;
-    }
-  }
-
-  &--next {
-    right: 31px;
-
-    @include vp-1199 {
-      right: 31px;
-    }
-
-    @include vp-767 {
-      right: 4px;
-    }
-  }
-
   &:hover,
   &:focus-visible {
     opacity: 0.7;
@@ -315,18 +289,42 @@
   }
 }
 
+.coaches__button--prev {
+  left: 31px;
+
+  @include vp-1199 {
+    left: 31px;
+  }
+
+  @include vp-767 {
+    left: 4px;
+  }
+}
+
+.coaches__button--next {
+  right: 31px;
+
+  @include vp-1199 {
+    right: 31px;
+  }
+
+  @include vp-767 {
+    right: 4px;
+  }
+}
+
 .coaches__icon {
   width: 16px;
   height: 32px;
-
-  &--next {
-    transform: rotate(180deg);
-  }
 
   @include vp-767 {
     width: 10px;
     height: 19px;
   }
+}
+
+.coaches__icon--next {
+  transform: rotate(180deg);
 }
 
 [data-coaches-list].no-js {
