--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -2,11 +2,11 @@
   padding-bottom: 90px;
 
   @include vp-1199 {
-    padding-bottom: 70px;
+    padding-bottom: 69px;
   }
 
   @include vp-767 {
-    padding-bottom: 61px;
+    padding-bottom: 59px;
   }
 }
 
@@ -64,10 +64,10 @@
   column-gap: 28px;
   background: $color-resolution-blue;
   box-shadow: 0 0 40px rgba(28, 51, 116, 0.2);
-  padding: 50px 62px 57px;
+  padding: 50px 62px 54px;
 
   @include vp-1199 {
-    padding: 49px 63px 58px 66px;
+    padding: 49px 63px 56px 66px;
   }
 
   @include vp-767 {
@@ -85,7 +85,7 @@
   line-height: 150%;
   color: $color-default-white;
   margin-top: 5px;
-  margin-bottom: 11px;
+  margin-bottom: 13px;
 
   @include vp-767 {
     line-height: 130%;
@@ -149,30 +149,6 @@
     width: 32px;
   }
 
-  &--prev {
-    left: -16px;
-
-    @include vp-1199 {
-      left: -26px;
-    }
-
-    @include vp-767 {
-      left: -27px;
-    }
-  }
-
-  &--next {
-    right: -16px;
-
-    @include vp-1199 {
-      right: -26px;
-    }
-
-    @include vp-767 {
-      right: -27px;
-    }
-  }
-
   &:hover,
   &:focus-visible {
     opacity: 0.7;
@@ -188,18 +164,42 @@
   }
 }
 
+.reviews__button--prev {
+  left: -16px;
+
+  @include vp-1199 {
+    left: -26px;
+  }
+
+  @include vp-767 {
+    left: -27px;
+  }
+}
+
+.reviews__button--next {
+  right: -16px;
+
+  @include vp-1199 {
+    right: -26px;
+  }
+
+  @include vp-767 {
+    right: -27px;
+  }
+}
+
 .reviews__icon {
   width: 16px;
   height: 32px;
-
-  &--next {
-    transform: rotate(180deg);
-  }
 
   @include vp-767 {
     width: 10px;
     height: 19px;
   }
+}
+
+.reviews__icon--next {
+  transform: rotate(180deg);
 }
 
 [data-reviews-list].no-js {
