--- a/source/sass/blocks/stock.scss
+++ b/source/sass/blocks/stock.scss
@@ -57,7 +57,11 @@
   border: 7px solid transparent;
   border-image-source: $blue-to-red-border;
   border-image-slice: 1;
-  padding: 18px 28px 29px;
+  padding: 17px 28px 31px;
+
+  @include vp-1199 {
+    padding: 19px 28px 29px;
+  }
 
   @include vp-767 {
     padding: 28px 28px 40px;
@@ -103,6 +107,7 @@
   grid-row: 1 / span 2;
 
   @include vp-1199 {
+    padding: 0;
     min-height: 462px;
     grid-template-columns: 41.2% 1fr;
     grid-column: 1 / -1;
@@ -149,20 +154,20 @@
     opacity: 0.5;
   }
 
-  &--promo {
-    font-size: 14px;
-    color: $color-default-white;
-    line-height: 16px;
-
-    &::after {
-      background-color: $color-default-white;
-    }
-  }
-
   @include vp-767 {
     display: block;
     margin-left: auto;
     margin-right: auto;
+  }
+}
+
+.stock__link--promo {
+  font-size: 14px;
+  color: $color-default-white;
+  line-height: 16px;
+
+  &::after {
+    background-color: $color-default-white;
   }
 }
 
@@ -174,7 +179,7 @@
   margin: 0 0 -25px;
 
   @include vp-767 {
-    margin: 0 0 -25px;
+    margin: 0 0 -27px;
   }
 }
 
@@ -192,11 +197,15 @@
 }
 
 .stock__item--promo p {
-  margin-top: 0;
-  margin-bottom: 187px;
+  margin-top: -2px;
+  margin-bottom: 189px;
   font-family: $ff-secondary;
   font-size: 18px;
   color: $color-default-white;
+
+  @include vp-1199 {
+    margin-bottom: 189px;
+  }
 
   @include vp-767 {
     margin-bottom: 30px;
@@ -231,11 +240,10 @@
   padding: 34px 45px;
 
   @include vp-1199 {
-    padding: 34px 41px 34px 45px;
+    padding: 35px 42px 45px 45px;
   }
 
   @include vp-767 {
     padding: 35px 47px 47px;
   }
 }
-
