--- a/source/sass/blocks/subscription.scss
+++ b/source/sass/blocks/subscription.scss
@@ -40,7 +40,7 @@
   text-align: center;
   position: relative;
   width: fit-content;
-  column-gap: 46px;
+  column-gap: 37px;
   margin: 0 auto 38px;
   padding: 0;
 
@@ -49,20 +49,21 @@
     position: absolute;
     display: block;
     bottom: 0;
-    left: 0;
-    width: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 97%;
     height: 2px;
     background-color: rgba(120, 120, 120, 0.2);
   }
 
   @include vp-1199 {
-    column-gap: 55px;
+    column-gap: 45px;
     margin: 0 auto 44px;
   }
 
   @include vp-767 {
-    margin: 0 auto 35px;
-    column-gap: 45px;
+    margin: 0 -5px 35px;
+    column-gap: 35px;
   }
 }
 
@@ -72,25 +73,28 @@
   font-size: 20px;
   line-height: 150%;
   display: inline-block;
+  vertical-align: auto;
   position: relative;
-  padding: 12px 0 13px;
+  padding: 12px 5px 13px;
   width: fit-content;
   opacity: 0.5;
   background-color: transparent;
-  max-width: 100px;
+  max-width: 110px;
 
   &::after {
     content: "";
     position: absolute;
     display: block;
+    left: 50%;
     bottom: 0;
-    left: 0;
-    width: 100%;
+    transform: translateX(-50%);
+    width: 89%;
     height: 2px;
     background-color: transparent;
 
     @include vp-767 {
-      width: 110%;
+      left: 56%;
+      width: 95%;
     }
   }
 
@@ -111,13 +115,13 @@
   &:hover {
     opacity: 1;
   }
+}
 
-  &--active {
-    opacity: 1;
+.subscription__nav-button--active {
+  opacity: 1;
 
-    &::after {
-      background-color: $color-crimson;
-    }
+  &::after {
+    background-color: $color-crimson;
   }
 }
 
@@ -131,13 +135,11 @@
 }
 
 .subscription__subcontent {
-  &--close {
-    display: none;
-  }
+  display: none;
+}
 
-  &--active {
-    display: block;
-  }
+.subscription__subcontent--active {
+  display: block;
 }
 
 [data-sub-title] {
@@ -147,6 +149,11 @@
   font-weight: 700;
   font-size: 30px;
   line-height: 29px;
+}
+
+[data-sub-tab].no-js {
+  display: block;
+  margin-bottom: 30px;
 }
 
 .subscription__content h4 {
