--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -43,7 +43,8 @@
   margin-right: auto;
   margin-left: 120px;
   position: relative;
-  padding: 12px 0 0 4px;
+  padding: 0 0 0 4px;
+  margin-top: 30px;
   list-style-type: none;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -68,11 +69,13 @@
 .contacts__list::before {
   content: "";
   position: absolute;
-  top: 23px;
-  left: 50%;
+  display: block;
   width: 1px;
-  height: 78%;
   background-color: $color-light-slate-grey;
+  top: 11px;
+  bottom: 11px;
+  left: 50%;
+  transform: translateX(-50%);
 
   @include vp-1199 {
     left: 53%;
