--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -2,11 +2,11 @@
   padding-bottom: 90px;
 
   @include vp-1199 {
-    padding-bottom: 69px;
+    padding-bottom: 71px;
   }
 
   @include vp-767 {
-    padding-bottom: 59px;
+    padding-bottom: 62px;
   }
 }
 
@@ -59,12 +59,13 @@
 }
 
 .reviews__item {
+  height: auto;
   display: grid;
   grid-template-columns: 80px 1fr;
   column-gap: 28px;
   background: $color-resolution-blue;
   box-shadow: 0 0 40px rgba(28, 51, 116, 0.2);
-  padding: 50px 62px 54px;
+  padding: 50px 62px 57px;
 
   @include vp-1199 {
     padding: 49px 63px 56px 66px;
@@ -85,7 +86,7 @@
   line-height: 150%;
   color: $color-default-white;
   margin-top: 5px;
-  margin-bottom: 13px;
+  margin-bottom: 10px;
 
   @include vp-767 {
     line-height: 130%;
