--- a/source/sass/blocks/subscription.scss
+++ b/source/sass/blocks/subscription.scss
@@ -62,8 +62,8 @@
   }
 
   @include vp-767 {
-    margin: 0 -5px 35px;
-    column-gap: 35px;
+    margin: 0 auto 35px;
+    column-gap: 46px;
   }
 }
 
@@ -94,7 +94,7 @@
 
     @include vp-767 {
       left: 56%;
-      width: 95%;
+      width: 110%;
     }
   }
 
@@ -110,6 +110,7 @@
 
   @include vp-767 {
     font-size: 16px;
+    padding: 12px 0 13px;
   }
 
   &:hover {
